# jirachi_cli

./: .env  Cargo.toml  README.md
src/: main.rs  schema.rs  seed.rs
